Update index.html to enhance SEO and social media sharing with comprehensive meta tags, including Open Graph and Twitter card data, and set the language attribute to Vietnamese.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartAttendance</title>
+
+    <!-- Primary Meta Tags -->
+    <title>SmartAttendance - Hệ thống quản lý chấm công thông minh</title>
+    <meta
+      name="title"
+      content="SmartAttendance - Hệ thống quản lý chấm công thông minh"
+    />
+    <meta
+      name="description"
+      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết. Giải pháp hiện đại cho doanh nghiệp."
+    />
+    <meta
+      name="keywords"
+      content="chấm công, quản lý nhân viên, attendance system, QR code, GPS tracking, quản lý ca làm việc, tính lương, báo cáo chấm công"
+    />
+    <meta name="author" content="SmartAttendance" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Vietnamese" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.smart-attendance.com/" />
+    <meta
+      property="og:title"
+      content="SmartAttendance - Hệ thống quản lý chấm công thông minh"
+    />
+    <meta
+      property="og:description"
+      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
+    />
+    <meta
+      property="og:image"
+      content="https://www.smart-attendance.com/og-image.jpg"
+    />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="SmartAttendance" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.smart-attendance.com/" />
+    <meta
+      property="twitter:title"
+      content="SmartAttendance - Hệ thống quản lý chấm công thông minh"
+    />
+    <meta
+      property="twitter:description"
+      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.smart-attendance.com/og-image.jpg"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.smart-attendance.com/" />
   </head>
   <body>
     <div id="root"></div>
