Update attendance system terminology and descriptions
- Replaced references to "QR code" with "photo" in various components and metadata to reflect new functionality.
- Updated text in the LandingPage and AuthLayout components for clarity and consistency.
- Modified localization files to change "scan QR" to "scan photo" for both English and Vietnamese versions, ensuring accurate user instructions.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       name="description"
-      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết. Giải pháp hiện đại cho doanh nghiệp."
+      content="Hệ thống quản lý chấm công thông minh với ảnh, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết. Giải pháp hiện đại cho doanh nghiệp."
     />
     <meta
       name="keywords"
-      content="chấm công, quản lý nhân viên, attendance system, QR code, GPS tracking, quản lý ca làm việc, tính lương, báo cáo chấm công"
+      content="chấm công, quản lý nhân viên, attendance system, ảnh, GPS tracking, quản lý ca làm việc, tính lương, báo cáo chấm công"
     />
     <meta name="author" content="SmartAttendance" />
     <meta name="robots" content="index, follow" />
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:description"
-      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
+      content="Hệ thống quản lý chấm công thông minh với ảnh, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
     />
     <meta
       property="og:image"
@@ -50,7 +50,7 @@
     />
     <meta
       property="twitter:description"
-      content="Hệ thống quản lý chấm công thông minh với QR code, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
+      content="Hệ thống quản lý chấm công thông minh với ảnh, GPS tracking, quản lý ca làm việc, tính lương tự động và báo cáo chi tiết."
     />
     <meta
       property="twitter:image"
